--- a/main.html
+++ b/main.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
 
   <title>Frontend Mentor | Order summary card</title>
 
@@ -25,23 +25,29 @@
 
 <body>
 
-  Order Summary
+  <h1 id="paneltitle">Order Summary</h1>
 
-  You can now listen to millions of songs, audiobooks, and podcasts on any
-  device anywhere you like!
+  <p id="paneldescription">
+    You can now listen to millions of songs, audiobooks, and podcasts on any
+    device anywhere you like!
+  </p>
 
-  Annual Plan
-  $59.99/year
+  <div id="subscription">
+    <p id="annualplan">Annual Plan</p>
+    <p id="price">$59.99/year</p>
+    <a id="changeplan" href="">Change</a>
+  </div>
 
-  Change
+  <a id="proceed" href="">Proceed to Payment</a>
 
-  Proceed to Payment
-  Cancel Order
+  <a id="cancel" href="">Cancel Order</a>
+
 
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="#">Ethan Phillips</a>.
   </div>
+
 </body>
 
 </html>
