--- a/main.html
+++ b/main.html
@@ -24,23 +24,30 @@
 </head>
 
 <body>
+  <main>
+    <div id="panel">
+      <img id="panelimg" src="images/illustration-hero.svg" alt="panel art">
 
-  <h1 id="paneltitle">Order Summary</h1>
+      <h1 id="paneltitle">Order Summary</h1>
 
-  <p id="paneldescription">
-    You can now listen to millions of songs, audiobooks, and podcasts on any
-    device anywhere you like!
-  </p>
+      <p id="paneldescription">
+        You can now listen to millions of songs, audiobooks, and podcasts on any
+        device anywhere you like!
+      </p>
 
-  <div id="subscription">
-    <p id="annualplan">Annual Plan</p>
-    <p id="price">$59.99/year</p>
-    <a id="changeplan" href="">Change</a>
-  </div>
+      <div id="subscription">
+        <p id="annualplan">Annual Plan</p>
+        <p id="price">$59.99/year</p>
+        <a id="changeplan" href="">Change</a>
+      </div>
 
-  <a id="proceed" href="">Proceed to Payment</a>
+      <a id="proceed" href="">Proceed to Payment</a>
 
-  <a id="cancel" href="">Cancel Order</a>
+      <a id="cancel" href="">Cancel Order</a>
+    </div>
+  </main>
+
+
 
 
   <div class="attribution">
