--- a/main.html
+++ b/main.html
@@ -5,7 +5,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- displays site properly based on user's device -->
-
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@500;700;900&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="styles/main.css">
   <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
 
   <title>Frontend Mentor | Order summary card</title>
@@ -24,29 +27,26 @@
 </head>
 
 <body>
-  <main>
-    <div id="panel">
-      <img id="panelimg" src="images/illustration-hero.svg" alt="panel art">
+  <div id="panel">
+    <img id="panelimg" src="images/illustration-hero.svg" alt="panel art">
 
-      <h1 id="paneltitle">Order Summary</h1>
+    <h1 id="paneltitle">Order Summary</h1>
 
-      <p id="paneldescription">
-        You can now listen to millions of songs, audiobooks, and podcasts on any
-        device anywhere you like!
-      </p>
+    <p id="paneldescription">
+      You can now listen to millions of songs, audiobooks, and podcasts on any
+      device anywhere you like!
+    </p>
 
-      <div id="subscription">
-        <p id="annualplan">Annual Plan</p>
-        <p id="price">$59.99/year</p>
-        <a id="changeplan" href="">Change</a>
-      </div>
-
-      <a id="proceed" href="">Proceed to Payment</a>
-
-      <a id="cancel" href="">Cancel Order</a>
+    <div id="subscription">
+      <p id="annualplan">Annual Plan</p>
+      <p id="price">$59.99/year</p>
+      <a id="changeplan" href="">Change</a>
     </div>
-  </main>
 
+    <a id="proceed" href="">Proceed to Payment</a>
+
+    <a id="cancel" href="">Cancel Order</a>
+  </div>
 
 
 
