--- a/main.html
+++ b/main.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- displays site properly based on user's device -->
+  <link rel="stylesheet" href="styles/reset.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@500;700;900&display=swap" rel="stylesheet">
@@ -38,9 +39,12 @@
     </p>
 
     <div id="subscription">
-      <p id="annualplan">Annual Plan</p>
-      <p id="price">$59.99/year</p>
-      <a id="changeplan" href="">Change</a>
+      <div id="pricecontainer">
+        <img id="musicpic" src="images/icon-music.svg" alt="music note">
+        <p id="annualplan">Annual Plan</p>
+        <p id="price">$59.99/year</p>
+        <a id="changeplan" href="">Change</a>
+      </div>
     </div>
 
     <a id="proceed" href="">Proceed to Payment</a>
